WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248261
Fix resizer behavior with `writing-mode: vertical-rl` or `direction: rtl`
https://bugs.webkit.org/show_bug.cgi?id=248261
Summary
Fix resizer behavior with `writing-mode: vertical-rl` or `direction: rtl`
Tim Nguyen (:ntim)
Reported
2022-11-22 23:50:29 PST
When opening: data:text/html,<div style="width: 200px; height: 200px; background: red; overflow: auto; resize: both; writing-mode: vertical-rl"></div> or data:text/html,<div style="width: 200px; height: 200px; background: red; overflow: auto; resize: both; direction: rtl"></div> The resizer is on the left side (as expected), however, resizing is really funky and goes really fast.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-22 23:51:02 PST
<
rdar://problem/102620110
>
Ahmad Saleem
Comment 2
2023-07-09 05:34:30 PDT
Is it by any chance this code:
https://github.com/WebKit/WebKit/blob/4ea2d50a5f28aa5b54ae68064d9421f3cc0b1060/Source/WebCore/rendering/RenderLayerScrollableArea.cpp#L1507
Aditya Keerthi
Comment 3
2023-09-18 15:09:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17879
EWS
Comment 4
2023-09-19 16:00:43 PDT
Committed
268157@main
(51184f8a009b): <
https://commits.webkit.org/268157@main
> Reviewed commits have been landed. Closing PR #17879 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug